change swagger.json
